--- a/text.adoc
+++ b/text.adoc
@@ -22,6 +22,8 @@ There are 2 Major steps
 
 image:images/img_1.png[img_1.png]
 
+![image info](./images/img_1.png) 
+
 
 == Step 1 - update Engine
 [,shell]
