--- a/images/skip.adoc
+++ b/images/skip.adoc
@@ -20,9 +20,7 @@ There are 2 Major steps
 
 . Node Upgrade
 
-image:images/img_1.png[img_1.png]
-
-![image info](./images/img_1.png) 
+image:HealthBlog/images/img_1.png[img_1.png]
 
 
 
