--- a/text.adoc
+++ b/text.adoc
@@ -146,6 +146,19 @@ kubectl delete pod <pod-name> -n teleport-agent
 . SLA CHECKER
 . Grafana dashboards
 
+###2 SLA Health Checker Dashboard Monitoring
+Keep the SLA Healthchecker Dashboard open and monitor if there are prolonged errors
+
+https://app.datadoghq.com/dashboard/rwj-2yk-6gs/astra-slo-data?fullscreen_end_ts=1663050250179&fullscreen_paused=false&fullscreen_section=overview&fullscreen_start_ts=1663046650179&fullscreen_widget=4428560398224910&from_ts=1663049332221&to_ts=1663050232221&live=true
+
+== Step 7 Completion Notification
+
+Mark the Task Completed and update the status and issues faced
+
+Mark the CCM Completed
+
+Update DBPE team in slack channel #astra-serverless-on-call
+
 
 
 
