--- a/text.adoc
+++ b/text.adoc
@@ -150,6 +150,18 @@ Keep the SLA Healthchecker Dashboard open and monitor if there are prolonged err
 
 (https://app.datadoghq.com/dashboard/rwj-2yk-6gs/astra-slo-data?fullscreen_end_ts=1698818054898&fullscreen_paused=false&fullscreen_refresh_mode=sliding&fullscreen_section=overview&fullscreen_start_ts=1698814454898&fullscreen_widget=513595057186032&refresh_mode=sliding&from_ts=1698817144067&to_ts=1698818044067&live=true)
 
+. Status of all the pods in cluster
+Monitor all pods and nodes and wait for all pods to come into running state
+
+Keep monitoring state of Kube from Terminal
+
+[,shell]
+----
+kubectl get pods -A -o wide | grep -v 'Running'
+
+kubectl get nodes -owide
+----
+
 
 == Step 3: Completion Notification
 
@@ -158,6 +170,8 @@ Mark the Task Completed and update the status and issues faced
 Mark the CCM Completed
 
 Update DBPE team in slack channel #pe-collab
+
+
 
 
 
