--- a/text.adoc
+++ b/text.adoc
@@ -49,9 +49,9 @@ Note: we cannot upgrade version N to N+2, it has to go from version N to N+1 and
 . Select latest version
 
 . Click on Actions and click on ‘Modify template’
-. Search for the AMI by clicking on ‘Browse more AMIs’ - click on community ami and select amazon-eks-node-1.23-v20230304 (targeted version v1.23)
+. Search for the AMI by clicking on ‘Browse more AMIs’ - click on community ami and select ** amazon-eks-node-1.23-v20230304 ** (targeted version v1.23)
 . Scroll to ‘Storage (volumes)’ section Expand Volume 1 and Change the 'Size (GiB)' to 100 GB from its default value (20) and Change "Encryption" to 'Don't include in launch template'
-. Check for the label in Advanced section labelFlag='--node-labels=node.kubernetes.io/requested_role=worker'
+. Check for the label in Advanced section ** labelFlag='--node-labels=node.kubernetes.io/requested_role=worker' **
 . Click on ‘Create template version’
 Once above is done we can start the node upgrades on the cluster following below steps 
 
